--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         // Versions
 
         // Build tools
-        kotlinVersion = '1.1.4'
+        kotlinVersion = '1.1.4-3'
         androidGradlePluginVersion = '2.3.3'
         androidSupportVersion = '26.1.0'
         // Third party
