Basic image loading from API.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile androidSupportDesign
     compile androidSupportRecyclerView
     compile dagger
+    compile epoxy
     compile kotlinStdlib
     compile kotterKnife
     compile picasso
