--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-kapt'
 repositories {
     google()
     jcenter()
+    flatDir { dirs '../libs' }
 }
 
 android {
@@ -38,7 +39,8 @@ dependencies {
     compile dagger
     compile epoxy
     compile kotlinStdlib
-    compile kotterKnife
+    // compile kotterKnife
+    compile(name: 'kotterknife-0.1.0-20160329.025248-20', ext: 'aar')
     compile picasso
     compile reduxKotlin
     compile reduxObservable
