Fix unresolved reference.
Kotterknife's package name was changed without warning in the latest
release which broke references to it: https://github.com/JakeWharton/kotterknife/issues/67

This commit points to the latest snapshot and fixes the package
references to reflect the change.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,8 +39,7 @@ dependencies {
     compile dagger
     compile epoxy
     compile kotlinStdlib
-    // compile kotterKnife
-    compile(name: 'kotterknife-0.1.0-20160329.025248-20', ext: 'aar')
+    compile kotterKnife
     compile picasso
     compile reduxKotlin
     compile reduxObservable
